[package]
name = "catr"
edition = "2021"
version = "0.1.0"
authors = ["Ken Youens-Clark <kyclark@gmail.com>"]
homepage = "https://github.com/d2jvkpn/pieces/tree/main/instances/catr"
description = "Rust cat program"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.34.0"
flate2 = "1.0.22"

[dev-dependencies]
assert_cmd = "2.0.2"
predicates = "2.1.0"
rand = "0.8.4"
