[package]
name = "uniqr"
authors = ["Ken Youens-Clark <kyclark@gmail.com>"]
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/d2jvkpn/pieces/tree/main/instances/uniqr"
description = "Rust uniq program"

[dependencies]
clap = "2.33"

[dev-dependencies]
assert_cmd = "1"
predicates = "1"
tempfile = "3"
rand = "0.8"
