[package]
name = "multiple_servers"
version = "0.1.0"
authors = ["Maxwell Flitton <maxwellflitton@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-rt = "2"
futures = "0.3"
serde = {version="1", fetures=["derive"]}
serde_json = { version = "1", default-features = false, features = ["alloc"] }
serde_derive = "1.0.147"
