[package]
name = "random_account"
version = "0.1.1"
authors = ["d2jvkpn"]
edition = "2021"
description = "A commandline tool which generate a random account username and password"
homepage = "https://github.com/d2jvkpn/pieces/tree/main/tools/rust/random_account"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
clap = "2.33"
rand = "0.8"
serde = { version = "1.0.130", features = ["derive"] }
serde_derive = "1.0.130"
serde_json = "1.0.68"
toml = "0.5"
serde_yaml = "0.8.13"
